refactor: 토큰인증 수정